@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.3.8) unstable; urgency=low
 
-  * 
+  * processor: pass Content-Type and Content-Language headers from
+    template
 
  --
 
